# concilie

./: .cursorrules  .env.example  .gitignore  .sops.yaml  ANALISE_COMPLETA_SISTEMA.md  ANALISE_PROJETO_COMPLETA.md  Atualizacao.bat  CHANGELOG.md  COMO_EXECUTAR.md  COMPATIBILIDADE_SQL.md  CONTEXT7_GUIDE.md  Configurar Banco.bat  Configurar Stack Moderno.bat  DEPLOY_VPS.md  DESCRICAO_DETALHADA.md  ESTRUTURA_DISTRIBUICAO.md  GESTAO_TERMOS_COMPLETO.md  GUIA_INSTALACAO_DISTRIBUICAO.md  GUIA_VALIDACAO_TESTES.md  INDEX.md  INSTALAR_COMPLETO.bat  INSTALL_QUICK.md  Iniciar MySQL.bat  Iniciar SQLite.bat  Iniciar Sistema.bat  Iniciar Stack Moderno - MySQL.bat  Iniciar Stack Moderno - SQLite.bat  Instalar.bat  JUNTADOR_DE_ARQUIVO.ipynb  LEIA-ME.txt  MIGRACAO_TERMOS.md  Procfile  README.md  README_DEV.md  README_DIST.txt  README_NEW.md  REQUISITOS_INSTALACAO.md  RESUMO_DISTRIBUICAO.md  SCRIPTS_INICIALIZACAO.md  backup_restore_venv.ps1  (+45 more)
.github/: ANALISE_UI_DESIGN_SYSTEM.md  COMPONENTES_UI.md  REFATORACAO_UI.md
_backup_refactor/: ClientesTable.tsx  TermosFiltravelisForm.tsx  page_taxas.tsx  page_termos.tsx  sql_debug.py
apps/api/: .dockerignore  .env.active  .env.example  .env.mysql  .gitignore  Dockerfile  README.md  check_db_locks.py  check_db_performance.py  check_schema.py  check_startup.py  check_trx.py  debug_db_native.py  debug_depara_final.txt  debug_depara_read.txt  debug_depara_sheets.txt  debug_detection.txt  debug_error_full.txt  debug_import_service.txt  debug_install.txt  debug_login_logic.py  debug_orm.py  init_import_tasks.py  inspect_depara.py  inspect_depara_simple.py  inspect_user_schema.py  kill_trx.py  lock_error.txt  perf_results.txt  pyproject.toml  schema.txt  trx_output.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_add_indexes_vendas_calculos.py  0002_add_permissoes_tables.py  0003_add_fk_indexes.py  0004_add_telas_permitidas.py
apps/api/app/: dist_main.py  main.py
apps/api/app/adapters/: proc_importacao_adapter.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: api.py
apps/api/app/api/v1/endpoints/: abusividade.py  ai.py  alertas_config.py  analista.py  analista_filtrado.py  auditoria.py  calculos.py  clientes.py  clientes_resumo.py  contestacoes.py  contestacoes_metricas.py  contextos.py  conversor.py  correcao.py  dashboard.py  db_ai.py  depara.py  divergencias.py  extratos_cliente.py  formas_pagamento.py  gestao.py  importacao.py  importacao_async.py  login.py  notificacoes.py  perfil.py  processamentos.py  recuperacao.py  relatorio_modelos.py  relatorio_tags.py  relatorios.py  sistema.py  tarefas.py  taxas.py  taxas_contratadas.py  termos.py  usuarios.py
apps/api/app/core/: config.py  database.py  db_helpers.py  security.py  sql_adapter.py  tasks.py
apps/api/app/models/: __init__.py  abusividade_task.py  alerta_config.py  audit_log.py  bandeira.py  base.py  calculo_task.py  chat_message.py  chat_session.py  cliente.py  contestacao.py  contexto.py  depara.py  extrato_cliente.py  import_task.py  legacy_depara.py  legacy_processamento.py  log.py  modelo_relatorio.py  notificacao.py  processamento.py  recebiveis.py  relatorio_tag.py  relatorio_task.py  taxa.py  taxa_contratada.py  termo.py  usuario.py  usuario_cliente.py  usuario_contexto.py  usuario_permissao.py  vendas.py  vendas_calculos.py
apps/api/app/repositories/: __init__.py  analista_repository.py  bandeira_repository.py  base.py  calculo_repository.py  cliente_repository.py  contexto_repository.py  correcao_repository.py  depara_repository.py  processamento_repository.py  relatorio_tag_repository.py  taxa_repository.py  taxas_repository.py  termo_repository.py  usuario_repository.py
apps/api/app/schemas/: __init__.py  abusividade.py  ai.py  alerta_config.py  analista.py  bandeira.py  calculo.py  cliente.py  contestacao.py  contexto.py  correcao.py  dashboard.py  depara.py  extrato_cliente.py  formas_pagamento.py  importacao.py  notificacao.py  processamento.py  relatorio.py  relatorio_tag.py  taxa.py  taxa_contratada.py  termo.py  token.py  usuario.py  usuario_permissao.py
apps/api/app/services/: __init__.py  abusividade_relatorio_service.py  abusividade_service.py  ai_service.py  ai_tools.py  alerta_config_service.py  audit_service.py  calculo_service.py  cliente_service.py  contestacao_service.py  contexto_service.py  db_ai_service.py  gestao_service.py  import_service.py  notificacao_service.py  parser_service.py  pdf_service.py  preprocessamento_service.py  reconciliation_core.py  relatorio_service.py  taxa_contratada_service.py
apps/api/app/services/conversor/: conver_service.py  gemini_fallback.py  rede_parser.py  xlsx_builder.py
apps/api/app/utils/: sql_adapters.py  sql_debug.py  sql_debug_examples.py
apps/api/relatorios/: template_contestacao.html
apps/api/scripts/: apply_indexes.py  export_seed.py  init_db.py  seed_modelos_relatorio.py  update_modelo_excel.py
apps/api/temp_uploads/: analyze_file.py
apps/api/tests/: conftest.py  test_auth.py  test_calculos.py  test_health.py  test_importacao.py  test_relatorio_tags.py  test_relatorios.py  test_save_edit.py  test_sqlite_smoke.py  test_usuarios.py
apps/api/tests/unit/: test_abusividade_logging.py  test_analise_periodos.py  test_endpoints_criticos.py  test_extrato_seguranca.py  test_extrato_validacao.py  test_ia_chat.py  test_notificacao_service.py  test_pdf_service.py  test_permissoes_endpoints.py  test_preprocessamento_service.py  test_relatorio_service.py  test_taxa_contratada_comparacao.py
assets/: clients.json  parametros_bandeiras.json  parametros_bandeiras_clients.json  parametros_taxas.json
bd_structures/: db_structure_concilie.json
conf/: colunas_recebiveis.py  conf_bd.py  conf_bd_sqlite.py  db_manager.py  debug_utils.py  depara_utils.py  funcoesbd.py  (+2 more)
(+436 files in other folders)
