[tool.poetry]
name = "financial--api"
version = "1.0.0"
description = "Financial  API"
authors = ["Financial  Team"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlalchemy = "^2.0.36"
pandas = "^2.2.3"
polars = "^1.2.1"
xlsx2csv = "^0.8.2"
pydantic = "^2.10.4"
pydantic-settings = "^2.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
pymysql = "^1.1.1"
langchain = "^0.3.0"
langchain-community = "^0.3.0"
langchain-openai = "^0.2.0"
langchain-experimental = "^0.3.0"
tabulate = "^0.9.0"
fastexcel = "^0.19.0"
jinja2 = "^3.1.6"
panel = "^1.3.8"
orjson = "^3.11.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
black = "^24.10.0"
isort = "^5.13.2"
httpx = "^0.28.1"
pyinstaller = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
